--- a/src/main/resources/_database.properties
+++ b/src/main/resources/_database.properties
@@ -1,7 +1,7 @@
 #===============================================================#
 #================== Database configuration ====================#
 #===============================================================#
-db.url=jdbc:mysql://localhost:3306/cucumber
+db.url=jdbc:mysql://127.0.0.1:3306/cucumber
 db.driver=com.mysql.cj.jdbc.Driver
-db.user=user
-db.pass=pass
+db.user=root
+db.pass=
