finished cucumber tests execution

--- a/src/main/resources/_database.properties
+++ b/src/main/resources/_database.properties
@@ -4,4 +4,4 @@
 db.url=jdbc:mysql://127.0.0.1:3306/cucumber
 db.driver=com.mysql.cj.jdbc.Driver
 db.user=root
-db.pass=
+db.pass=pass NOT WORKING?!? Change in mybatis config
